--- a/main.html
+++ b/main.html
@@ -8,20 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Rajasthan jaipur</h1>
-	<hr>
-	<p>Rajastan is beautiful place and land of grate peoples.In Rajasthan jaipur fort is remarkable place, the lake around the fort seems beautiful.</p>
-	<ol type="1">
-		<li>Ranthambor <em>National</em> park.</li>
-		<li>Amber <em>palce.</em></li>
-		<li>Hawa Mahal <strong>fort.</strong></li>
-		<li>City <em>palace.</em></li>
-		<li>Jantar <bold>Mantar</bold></li>
-	</ol>			
-	<ul>
-		<li>Dal <em>bati</em></li>
-		<li>Moong <strong>halwa</strong></li>
-	</ul>
+	<h1>Paris</h1>
+    <br>
+    <p>Paris, the capital city of France, is known for its art, fashion, gastronomy, and culture. The city is also famed for its café culture and landmarks like the Eiffel Tower, the Notre-Dame Cathedral, and the Louvre Museum.</p>
+    <ol>
+        <li><strong>Eiffel Tower</strong> - The most iconic symbol of Paris, offering breathtaking views of the city.</li>
+        <li><i>Louvre Museum</i> - The world's largest art museum and a historic monument in Paris, home to thousands of works of art including the Mona Lisa.</li>
+        <li><strong>Notre-Dame Cathedral</strong> - A miieval Catholic cathedral renowned for its French Gothic architecture.</li>
+        <li><i>Champs-Élysées</i> - A world-famous avenue known for its theatres, cafés, and luxury shops.</li>
+        <li><strong>Sacré-Cœur</strong> - A basilica located at the highest point in the city, offering panoramic views of Paris.</li>
+    </ol>
+    <ul>
+        <li><strong>French Croissants</strong> - Flaky, buttery pastries that are a staple of French cuisine.</li>
+        <li><i>Macarons</i> - Delicate, colorful meringue-based confections.</li>
+        <li><strong>Escargots</strong> - A traditional dish of cooked land snails.</li>
+        <li><b>Baguettes</b> - Long, thin loaves of French bread known for their crisp crust.</li>
+        <li><strong>Crème Brûlée</strong> - A rich custard topped with a layer of hard caramel.</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
